FIX misplaced labels of InlineGroup widgets if text too long

--- a/Facades/js/themes/jeasyui.exface.css
+++ b/Facades/js/themes/jeasyui.exface.css
@@ -72,6 +72,7 @@ fieldset.exface_inputgroup legend {color: #404040; font-weight: bold; padding: 0
 .exf-inline-group .exf-control:last-of-type {padding-right: 0px !important;}
 .exf-inline-group {padding-top: 0px !important; padding-bottom: 0px !important; padding-right: 2px !important;}
 .exf-inline-group p {display: inline-block !important; padding: 0; margin: 0;}
+.exf-inline-group label {display: inline-block; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; vertical-align: middle;}
 
 /* Carousel */
 .exf-widget-carousel ul.tabs {width: 100%; text-align: center}
